--- a/style.css
+++ b/style.css
@@ -158,3 +158,50 @@ tbody tr:nth-child(even) {
     transform: rotate(360deg);
   }
 }
+/* Botones */
+button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+a.btn {
+  display: inline-block;
+  padding: 12px 20px;
+  margin: 10px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  background-color: #007bff;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+a.btn:hover {
+  background-color: #0056b3;
+}
+
+a.btn {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 10px;
+  color: white;
+}
+
+a.btn-back {
+  background-color: #6c757d;
+}
+
+a.btn-back:hover {
+  background-color: #5a6268;
+}
